--- a/final_project/css/style.css
+++ b/final_project/css/style.css
@@ -1,6 +1,6 @@
 #container {
 	margin: 0 auto;
-	width: 100%;
+	max-width: 1200px;
 }
 
 body {
@@ -43,7 +43,7 @@ nav a:hover {
 }
 
 hr {
-	border-top: 1px #d2d2d2;
+	border-top: 1px solid #AAAAAA;
 }
 
 }
